--- a/pageheader/pageheader.css
+++ b/pageheader/pageheader.css
@@ -2,6 +2,7 @@
 	padding: 21px 10px;
 	color: #31708f;
 	background-color: #d9edf7;
+	border: 1px solid #bce8f1;
 	text-align: center;
 	margin-bottom: 20px;
 	border-radius: 4px;
