--- a/cdav/view/css/cdav.css
+++ b/cdav/view/css/cdav.css
@@ -3,3 +3,39 @@
 	padding-left: 15px;
 	border-left: 3px solid #ccc;
 }
+
+.vcard-nophoto {
+	display: inline-block;
+	width: 32px;
+	height: 32px;
+	border-radius: 4px;
+	border: 1px solid #ccc;
+	text-align: center;
+	font-size: 20px;
+	color: #fff;
+	background-color: #ddd;
+}
+
+.vcard-photo {
+	width: 32px;
+	height: 32px;
+	border-radius: 4px;
+	border: 1px solid #ccc;
+}
+
+.vcard-fn {
+	display: inline-block;
+	margin-left: 7px;
+}
+
+.vcard-org,
+.vcard-title,
+.vcard-tel,
+.vcard-email,
+.vcard-impp,
+.vcard-url,
+.vcard-adr,
+.vcard-note {
+	margin-bottom: 1em;
+	margin-left: 39px;
+}
