--- a/cdav/view/css/cdav.css
+++ b/cdav/view/css/cdav.css
@@ -67,11 +67,13 @@ input.vcard-fn {
 	color: #999;
 }
 
-.vcard-fn {
+.vcard-fn,
+#create_form {
 	display: none;
 }
 
 input.vcard-fn,
+.vcard-fn-create input,
 .vcard-org input,
 .vcard-title input,
 .vcard-tel input,
