--- a/rendezvous/view/css/rendezvous.css
+++ b/rendezvous/view/css/rendezvous.css
@@ -8,7 +8,7 @@
 		border: 1px solid #cccccc;
 		bottom: 12px;
 		left: -50px;
-		min-width: 280px;
+		min-width: 100px;
 }
 .ol-popup:after, .ol-popup:before {
 		top: 100%;
@@ -46,4 +46,17 @@ html, body, .map {
 		padding: 0;
 		width: 100%;
 		height: 100%;
+}
+
+
+#recenter-control {
+    position: absolute;
+    background-color: #eee;
+    background-color: rgba(255, 255, 255, .4);
+    background: url(/addon/rendezvous/view/img/center-control.png) no-repeat center center fixed;
+    border-radius: 4px;
+    padding: 2px;
+    bottom: 10px;
+    left: 10px;
+    z-index: 100;
 }
