Cosmetic updates for Chess addon to recover interface from Bootstrap v4 update

--- a/chess/view/css/chessboard.css
+++ b/chess/view/css/chessboard.css
@@ -134,3 +134,27 @@ input.radio:checked ~ label {
 input.radio:focus ~ label:before {
 	box-shadow: 0 0 0 3px #999;
 }
+
+
+#chess-games-owner > li,
+#chess-controls-history-collapse,
+#chess-controls-game-collapse {
+	margin-left: 10px;
+}
+
+.settings-label {
+	border: none;
+}
+
+#chess-revert {
+	margin-bottom: 10px;
+}
+
+
+#chess-controls .section-subtitle-wrapper {
+	background-color: #F0D9B5;
+}
+
+#chess-games-owner a {
+	color: gray;
+}
