when scrolled to top: start face detection and prepend new new face encodings (images)

--- a/faces/view/css/faces.css
+++ b/faces/view/css/faces.css
@@ -84,3 +84,12 @@
 .face-name-and-buttons {
     visibility: hidden;
 }
+
+#face-scoll-top {
+    margin: auto;
+    width: 10%;
+}
+
+#face-scoll-top-button {
+    border-radius: 50%;
+}
